<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detalle_Contacto">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_confirmar_datos"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <TextView
        android:id="@+id/tvNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitulo"
        android:text="@string/hint_nombre"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tvFechaNacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNombre"
        android:text="@string/hint_fecha_nacimiento"
        android:layout_marginTop="20dp"/>



    <TextView
        android:id="@+id/tvTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvFechaNacimiento"
        android:text="@string/hint_telefono"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTelefono"
        android:text="@string/hint_email"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tvDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvEmail"
        android:text="@string/hint_descripcion"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btnEditarDatos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvDescripcion"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_editar_datos"
        android:layout_marginTop="40dp"
        android:theme="@style/MiBotonRaised"/>

</RelativeLayout>